k8s-lab/ingress/fruit.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app:  apple
  name: apple
spec:
  containers:
  - image: rockman88v/viettq-web:latest
    name: apple
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app:  banana
  name: banana
spec:
  containers:
  - image: rockman88v/viettq-web:latest
    name: banana
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app:  apple
  name: apple
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app:  apple
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app:  banana
  name: banana
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app:  banana
  type: ClusterIP
